--- a/assets/admin/state/edit_state_class.html
+++ b/assets/admin/state/edit_state_class.html
@@ -94,14 +94,14 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>General Form</h1>
+                        <h1>业务状态</h1>
                     </div>
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active">General Form</li>
-                        </ol>
-                    </div>
+    <!--                    <div class="col-sm-6">-->
+    <!--                        <ol class="breadcrumb float-sm-right">-->
+    <!--                            <li class="breadcrumb-item"><a href="#">Home</a></li>-->
+    <!--                            <li class="breadcrumb-item active">General Form</li>-->
+    <!--                        </ol>-->
+    <!--                    </div>-->
                 </div>
             </div><!-- /.container-fluid -->
         </section>
@@ -115,7 +115,7 @@
                         <!-- general form elements -->
                         <div class="card card-primary">
                             <div class="card-header">
-                                <h3 class="card-title">Quick Example</h3>
+                                <h3 class="card-title">编辑/edit</h3>
                             </div>
                             <!-- /.card-header -->
                             <!-- form start -->
