--- a/assets/admin/roles/role_permission.html
+++ b/assets/admin/roles/role_permission.html
@@ -66,7 +66,7 @@
                  alt="AdminLTE Logo"
                  class="brand-image img-circle elevation-3"
                  style="opacity: .8">
-            <span class="brand-text font-weight-light">AdminLTE 3</span>
+            <span class="brand-text font-weight-light">数据模型管理系统</span>
         </a>
 
         <!-- Sidebar -->
