--- a/assets/admin/event/stream_list.html
+++ b/assets/admin/event/stream_list.html
@@ -219,7 +219,7 @@
                     </div>
                     <div class="form-group">
                         <label>事件说明</label>
-                        <textarea class="form-control" rows="3"></textarea>
+                        <textarea name="comment" id="comment" class="form-control" rows="3"></textarea>
                     </div>
                     <div class="form-group text-right">
                         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
@@ -311,21 +311,6 @@
     </a>
   </li>
   {{/if}}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </script>
 <script id="table-list" type="text/x-jquery-tmpl">
 <tr>
@@ -341,13 +326,6 @@
     <td>{{html operation}}</td>
     <!--<td>${columns}</td>-->
 </tr>
-
-
-
-
-
-
-
 </script>
 
 <script id="event-list" type="text/x-jquery-tmpl">
@@ -359,10 +337,6 @@
     <td>${created_at}</td>
     <td>{{html operation}}</td>
 </tr>
-
-
-
-
 </script>
 
 <link rel="stylesheet" href="/plugins/jquery-toast-plugin-1.3.2/dist/jquery.toast.min.css">
