--- a/assets/admin/event/stream_list.html
+++ b/assets/admin/event/stream_list.html
@@ -311,6 +311,9 @@
     </a>
   </li>
   {{/if}}
+
+
+
 </script>
 <script id="table-list" type="text/x-jquery-tmpl">
 <tr>
@@ -326,6 +329,9 @@
     <td>{{html operation}}</td>
     <!--<td>${columns}</td>-->
 </tr>
+
+
+
 </script>
 
 <script id="event-list" type="text/x-jquery-tmpl">
@@ -337,6 +343,9 @@
     <td>${created_at}</td>
     <td>{{html operation}}</td>
 </tr>
+
+
+
 </script>
 
 <link rel="stylesheet" href="/plugins/jquery-toast-plugin-1.3.2/dist/jquery.toast.min.css">
@@ -372,7 +381,7 @@
                 dataFilter: function (data, type) {
                     let obj = JSON.parse(data);
 
-                    if(obj.code === 600){
+                    if (obj.code === 600) {
                         showToast(obj.msg, "/admin/entrance/login.html");
                         return false;
                     }
@@ -408,6 +417,22 @@
 
     loadContent();
 
+    function getVersion() {
+        var now = new Date();
+        var year = now.getFullYear();
+
+        var month = now.getMonth() + 1;
+        if (month < 10) {
+            month = "0" + month
+        }
+
+        var day = now.getDate();
+        if (day < 10) {
+            day = "0" + day
+        }
+
+        return "v" + year + month + day;
+    }
 
     $("#create_event").bind("click", function (e) {
         let stringIds = getCheckedIds();
@@ -417,6 +442,7 @@
         }
         $('#stream_ids').text(stringIds);
         $('.stream_ids_input').val(stringIds);
+        $("#event_version").val(getVersion())
     });
 
     $(".show-diff").bind('click', function (e) {
