--- a/assets/admin/state/add_direction.html
+++ b/assets/admin/state/add_direction.html
@@ -132,6 +132,11 @@
                                         <select class="form-control col-md-4" name="state_to" id="state_to" >
                                         </select>
                                     </div>
+
+                                    <div class="form-group">
+                                        <label for="label">说明标签</label>
+                                        <input type="text" class="form-control" name="label" id="label">
+                                    </div>
                                 </div>
                                 <!-- /.card-body -->
 
@@ -204,7 +209,7 @@
     window.sideBarPath = "/admin/state/list.html"
 </script>
 <script id="pid-select" type="text/x-jquery-tmpl">
-    <option value="${state_value}">${state_value_desc}</option>
+    <option  value="${state_value}">(${state_value})${state_value_desc}</option>
 </script>
 <link rel="stylesheet" href="/plugins/jquery-toast-plugin-1.3.2/dist/jquery.toast.min.css">
 <script src="/plugins/jquery-toast-plugin-1.3.2/dist/jquery.toast.min.js"></script>
